samples/_failures_safe/1761161142_746603_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_acecc138.c: In function ‘main’:
./samples/SAFE/__tmp_acecc138.c:129:13: error: ‘MAT’ undeclared (first use in this function)
  129 |             MAT
      |             ^~~
./samples/SAFE/__tmp_acecc138.c:129:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_acecc138.c:129:16: error: expected ‘;’ at end of input
  129 |             MAT
      |                ^
      |                ;
./samples/SAFE/__tmp_acecc138.c:129:13: error: expected declaration or statement at end of input
  129 |             MAT
      |             ^~~
./samples/SAFE/__tmp_acecc138.c:129:13: error: expected declaration or statement at end of input
